actual final commit

--- a/public/stats.html
+++ b/public/stats.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="transition-overlay">
-        <div class="transition-text">Let's take a walk down memory lane...</div>
+        <div class="transition-text">Let's take a trip down memory lane...</div>
     </div>
     <div class="page-container">
         <div class="slideshow-container">
